# grpc_mock_server_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  generator.cpp  generator.h  grpc_mock_server_plugin.cpp  grpc_mock_server_plugin.h  vcpkg-configuration-template.json  vcpkg.json
templates/: packages_xml_package_begin.txt  packages_xml_package_end.txt  packages_xml_service_begin.txt  packages_xml_service_end.txt  packages_xml_service_method.txt  packages_xml_service_method_leading_comments.txt  packages_xml_service_method_trailing_comments.txt  services_header_class_declaration.txt  services_header_class_epilogue.txt  services_header_class_prologue.txt  services_header_epilogue.txt  services_header_namespace_begin.txt  services_header_pointer_declaration.txt  services_header_pointer_definition.txt  services_header_prologue.txt  services_source_constructor_begin.txt  services_source_destructor.txt  services_source_includes.txt  services_source_method_begin.txt  services_source_method_body.txt  services_source_pointer_definition.txt  services_source_prologue.txt  stub_header_additional_include.txt  stub_header_epilogue.txt  stub_header_include.txt  stub_header_namespace_end.txt  stub_header_prologue.txt  stub_header_prologue_with_original_file_comments.txt  stub_header_server_method_bidi_streaming.txt  stub_header_server_method_client_only_streaming.txt  stub_header_server_method_no_streaming.txt  stub_header_server_method_server_only_streaming.txt  stub_header_service.txt  stub_header_service_namespace_begin.txt  stub_header_service_namespace_end.txt  stub_source_namespace_begin.txt  stub_source_namespace_end.txt  stub_source_prologue.txt  stub_source_server_method_bidi_streaming.txt  stub_source_server_method_client_only_streaming.txt  (+4 more)
